# Django_projects

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: forms.py
