[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "VasAndr"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "django-debug-toolbar (>=7.0.0,<8.0.0)",
    "django-filter (>=26.1,<27.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "pytz (>=2026.2,<2027.0)",
    "asgiref (>=3.12.1,<4.0.0)",
    "sqlparse (>=0.5.5,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
